Added CRUD operations and tests to user